.app's description support the unicode

--- a/rebar.config
+++ b/rebar.config
@@ -13,7 +13,7 @@
         {eunit_formatters,    "0.3.1"}]}.
 
 {escript_name, rebar3}.
-{escript_emu_args, "%%! +sbtu +A0\n"}.
+{escript_emu_args, "%%! +sbtu +A0 +pc unicode\n"}.
 %% escript_incl_extra is for internal rebar-private use only.
 %% Do not use outside rebar. Config interface is not stable.
 {escript_incl_extra, [{"relx/priv/templates/*", "_build/default/lib/"},
